# deepstream-app

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  config_infer_primary_detr.txt  export_detr_onnx.py  labels_coco.txt  main.cpp  main.py  nvdsinfer_customparser_detr.cpp
cmake/Modules/: FindDeepStream.cmake
obsolete/: config_tracker_NvDCF_perf.yml  tracker_config.txt
